--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -7,6 +7,7 @@
 	--black: #171718;
 	--black-border: #26292d;
 	--white: #fff;
+	--light-gray: #eae5e5;
 	--purple: #5c62ec;
 
 	/* Nav */
@@ -14,15 +15,14 @@
 	--nav-border: var(--black-border);
 	--nav-text: var(--white);
 
-	/* Header */
-	--header-bg: var(--black);
-	--header-text: var(--white);
-
 	/* Footer */
 	--footer-bg: var(--black);
 	--footer-text: var(--white);
 
 	/* Light mode */
+	--header-bg: var(--white);
+	--header-text: var(--black);
+	--header-img: url('./../../../img/header-bg-gg.png');
 	--page-bg: var(--white);
 	--text-color: var(--black);
 	--accent: var(--purple);
@@ -35,6 +35,9 @@
 
 .dark {
 	/* Dark mode */
+	--header-bg: var(--black);
+	--header-text: var(--white);	
+	--header-img: url('./../../../img/header-bg.png');
 	--page-bg: #252526;
 	--text-color: var(--white);
 
@@ -167,9 +170,6 @@ body {
 	row-gap: 30px;
 }
 
-.applications {
-	padding-bottom: 25px;
-}
 
 /* Project details */
 
@@ -230,8 +230,6 @@ body {
 .content-list__item p + p {
 	margin-top: 0.5em;
 }
-
-
 
 @media (max-width: 620px) {
 	/* Header  */
