--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,5 +1,3 @@
-/* Nav */
-
 .nav {
 	padding: 20px 0;
 	background-color: var(--nav-bg);
@@ -26,6 +24,12 @@
 
 .logo strong {
 	font-weight: 700;
+}
+
+.nav-aria-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 30px;
 }
 
 .nav-list {
@@ -63,4 +67,23 @@
 	height: 2px;
 	width: 100%;
 	background-color: var(--accent);
+}
+
+
+@media (max-width: 577px) {
+	.nav-aria-wrapper {
+		flex-direction:column-reverse;
+		align-items: flex-end;
+	}
+
+	.nav-list {
+		/* justify-content: flex-end;
+		max-width: 300px; */
+		flex-direction: column;
+		align-items: flex-end;
+	}
+
+	.logo {
+		align-self: flex-start;
+	}
 }
