removed link selection

--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -40,9 +40,7 @@
 	--header-img: url('./../../../img/header-bg.png');
 	--page-bg: #252526;
 	--text-color: var(--white);
-
 	--title-1: var(--white);
-
 	--project-card-bg: var(--black);
 	--project-card-text: var(--white);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
@@ -51,7 +49,7 @@
 html,
 body {
 	min-height: 100vh;
-
+	-webkit-tap-highlight-color: transparent;
 	font-family: 'DM Sans', sans-serif;
 	letter-spacing: -0.5px;
 
