--- a/src/components/project/style.css
+++ b/src/components/project/style.css
@@ -3,10 +3,14 @@
 	background-color: var(--project-card-bg);
 	box-shadow: var(--box-shadow);
 	border-radius: 10px;
+	min-width: 370px;
+	min-height: 349px;
 }
 
 .project__img {
 	border-radius: 10px;
+	min-height: 277px;
+	min-width: 370px;
 }
 
 .project__title {
@@ -15,4 +19,16 @@
 	font-size: 24px;
 	line-height: 1.3;
 	color: var(--project-card-text);
+}
+
+@media (max-width: 320px) {
+	.project {
+		max-width: 288px;
+		max-height: 288px;
+	}
+
+	.project__img {
+		max-width: 290px;
+		max-height: 217px;
+	}
 }
