added switch language functionality

--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -39,12 +39,12 @@
 	align-items: center;
 	column-gap: 40px;
 	font-size: 16px;
-	font-weight: 500;
-	font-family: 'Poppins', sans-serif;
 }
 
 .nav-list__link {
 	color: var(--nav-text);
+	font-family: 'Suisse';
+	font-weight: bold;
 }
 
 .nav-list__link:hover {
@@ -73,6 +73,7 @@
 	.nav-aria-wrapper {
 		flex-direction:column-reverse;
 		align-items: flex-end;
+		gap: 15px;
 	}
 
 	.nav-list {
