--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -1,5 +1,17 @@
 @import './reset.css';
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
+
+
+@font-face {
+  src: url(../../../fonts/SuisseIntl-Book.woff);
+  font-family: 'Suisse';
+  font-weight: normal;
+}
+
+@font-face {
+  src: url(../../../fonts/SuisseIntl-Bold.woff);
+  font-family: 'Suisse';
+  font-weight: bold;
+}
 
 :root {
 	/* Colors */
@@ -21,7 +33,6 @@
 	--header-img: url('./../../../img/header-bg-gg.png');
 	--page-bg: #f7f4e3;
 
-	
 	--text-color: var(--black);
 	--accent: var(--purple);
 	--title-1: var(--accent);
@@ -65,6 +76,9 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
+	font-family: 'Suisse';
+	font-weight: bold;
+
 }
 
 #root {
@@ -102,8 +116,7 @@ body {
 }
 
 .title-2 {
-	margin-bottom: 20px;
-
+	margin-bottom: 10px;
 	font-size: 40px;
 	font-weight: 700;
 	line-height: 1.3;
@@ -127,6 +140,10 @@ body {
 	font-size: 16px;
 	font-weight: 500;
 
+	font-family: 'Suisse';
+	font-weight: bold;
+	line-height: 150%;
+
 	transition: opacity 0.2s ease-in;
 }
 
@@ -143,9 +160,9 @@ body {
 
 .btn-outline {
 	display: flex;
+	flex-wrap: wrap;
 	column-gap: 10px;
-	align-items: center;
-
+	align-items: flex-end;
 	height: 48px;
 	padding: 12px 20px;
 
