--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -3,13 +3,13 @@
 
 @font-face {
   src: url(../../../fonts/SuisseIntl-Book.woff);
-  font-family: 'Suisse';
+	font-family: 'Suisse', Arial, Helvetica, sans-serif;
   font-weight: normal;
 }
 
 @font-face {
   src: url(../../../fonts/SuisseIntl-Bold.woff);
-  font-family: 'Suisse';
+	font-family: 'Suisse', Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 
@@ -76,7 +76,7 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
-	font-family: 'Suisse';
+	font-family: 'Suisse', Arial, Helvetica, sans-serif;
 	font-weight: bold;
 
 }
@@ -104,7 +104,7 @@ body {
 }
 
 .section {
-	padding: 70px 0;
+	padding: 50px 0;
 }
 
 .title-1 {
@@ -122,10 +122,6 @@ body {
 	line-height: 1.3;
 }
 
-
-
-
-
 /* Btn */
 
 .btn {
@@ -140,7 +136,7 @@ body {
 	font-size: 16px;
 	font-weight: 500;
 
-	font-family: 'Suisse';
+	font-family: 'Suisse', Arial, Helvetica, sans-serif;
 	font-weight: bold;
 	line-height: 150%;
 
@@ -163,8 +159,13 @@ body {
 	flex-wrap: wrap;
 	column-gap: 10px;
 	align-items: flex-end;
-	height: 48px;
-	padding: 12px 20px;
+
+line-height: 137%;
+
+	max-height: 48px;
+	min-width: 145px;
+
+	padding: 10px 10px;
 
 	border-radius: 5px;
 	border: 1px solid #000;
@@ -186,7 +187,7 @@ body {
 /* Projects  */
 
 .projects {
-	padding: 34px 0 60px;
+	padding: 34px 0 0;
 	display: flex;	
 	justify-content: center;
 	flex-wrap: wrap;
@@ -254,6 +255,15 @@ body {
 .content-list__item p + p {
 	margin-top: 0.5em;
 }
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 620px) {
 	/* Header  */
