--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -2,7 +2,7 @@
 
 .footer {
 	margin-top: auto;
-	padding: 60px 0 50px;
+	padding: 30px 0;
 	background-color: var(--footer-bg);
 	color: var(--footer-text);
 }
