--- a/src/components/project/style.css
+++ b/src/components/project/style.css
@@ -12,11 +12,11 @@
 }
 
 .project__title {
-	padding: 15px 20px 25px;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
+	padding: 15px 15px 16px;
+	font-size: 19px;
+	line-height: 1;
 	color: var(--project-card-text);
+	font-family: 'Suisse', Arial, Helvetica, sans-serif;
 }
 
 @media (max-width: 380px) {
