--- a/src/components/project/style.css
+++ b/src/components/project/style.css
@@ -1,4 +1,8 @@
 .project {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	max-width: 370px;
 	background-color: var(--project-card-bg);
 	box-shadow: var(--box-shadow);
@@ -12,7 +16,7 @@
 }
 
 .project__title {
-	padding: 15px 15px 16px;
+	padding: 15px 0;
 	font-size: 19px;
 	line-height: 1;
 	color: var(--project-card-text);
@@ -24,7 +28,6 @@
 		max-width: 288px;
 		max-height: 288px;
 	}
-
 	
 	.project__img {
 		min-width: 290px;
