--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -218,11 +218,24 @@ line-height: 137%;
 
 .project-details__desc {
 	margin-bottom: 30px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
 
-	font-weight: 700;
-	font-size: 24px;
+.project-details__skills {
+	font-weight: bold;
+	font-size: 32px;
 	line-height: 1.3;
 }
+
+.project-details__text {
+	font-weight: normal;
+	display: block;
+	text-align: justify;
+	font-size: 24px;
+}
+
 
 .project-details__buttons {
 	display: flex;
