--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -22,6 +22,8 @@
 	--purple: #5c62ec;
 	--yellow: #e5c41d;
 	--medium-gray: #7d7c79;
+	--dust-blue: #5d8dd5;
+
 
 	/* Light mode */
 	--nav-bg: var(--medium-gray);
@@ -33,8 +35,8 @@
 	--page-bg: #f7f4e3;
 
 	--text-color: var(--black);
-	--accent: var(--purple);
-	--title-1: var(--accent);
+	--accent: var(--dust-blue);
+	--title-1: var(--black-border);
 
 	--project-card-bg: var(--white);
 	--project-card-text: var(--black);
@@ -63,6 +65,8 @@
 	--project-card-bg: var(--black);
 	--project-card-text: var(--white);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
+
+	--accent: var(--purple);
 }
 
 html,
