--- a/src/components/not-fount-404/style.css
+++ b/src/components/not-fount-404/style.css
@@ -2,7 +2,7 @@
   padding: 10% 0;
   align-self: center;
   font-size: 60px;
-  font-weight: 700;
+  font-weight: bold;
   color: var(--accent);  
 }
 
