--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -1,18 +1,16 @@
 .nav {
-	padding: 20px 0;
-	background-color: var(--nav-bg);
-	border-bottom: 1px solid var(--nav-border);
-	color: var(--nav-text);
-	letter-spacing: normal;
-}
-
-.nav-row {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
 	column-gap: 30px;
 	row-gap: 20px;
 	flex-wrap: wrap;
+
+	padding: 20px 20px;
+	background-color: var(--nav-bg);
+	border-bottom: 1px solid var(--nav-border);
+	color: var(--nav-text);
+	letter-spacing: normal;
 }
 
 .logo {
@@ -22,17 +20,13 @@
 	font-family: 'Poppins', sans-serif;
 }
 
-.logo strong {
-	font-weight: 700;
-}
-
-.nav-aria-wrapper {
+.nav_wrapper {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
 }
 
-.nav-list {
+.nav_list {
 	display: flex;
 	flex-wrap: wrap;
 	row-gap: 10px;
@@ -41,21 +35,22 @@
 	font-size: 16px;
 }
 
-.nav-list__link {
+.nav_list__link {
 	color: var(--nav-text);
 	font-family: 'Suisse', Arial, Helvetica, sans-serif;
 	font-weight: bold;
 }
 
-.nav-list__link:hover {
+.nav_list__link:hover {
 	opacity: 0.8;
 }
 
-.nav-list__link--active {
+.nav_list__link__active {
 	position: relative;
+	color: var(--nav-text);
 }
 
-.nav-list__link--active::before {
+.nav_list__link__active::before {
 	content: '';
 
 	position: absolute;
@@ -68,15 +63,14 @@
 	background-color: var(--accent);
 }
 
-
 @media (max-width: 577px) {
-	.nav-aria-wrapper {
+	.nav_wrapper {
 		flex-direction:column-reverse;
 		align-items: flex-end;
 		gap: 15px;
 	}
 
-	.nav-list {
+	.nav_list {
 		flex-direction: column;
 		align-items: flex-end;
 	}
@@ -84,4 +78,16 @@
 	.logo {
 		align-self: flex-start;
 	}
+}
+
+@media (max-width: 620px) {
+	.nav {
+		justify-content: space-between;
+	}
+}
+
+@media (max-width: 320px) {
+	.nav {
+		display: block;
+	}	
 }
