--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -1,13 +1,9 @@
-/* Footer */
-
 .footer {
 	margin-top: auto;
 	padding: 30px 0;
 	background-color: var(--footer-bg);
 	color: var(--footer-text);
-}
 
-.footer__wrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -35,4 +31,26 @@
 .social__icon:active {
 	position: relative;
 	top: 1px;
+}
+
+
+
+
+@media (max-width: 620px) {
+
+	.footer {
+		padding: 40px 0 30px;
+		row-gap: 20px;
+	}
+	
+	/* .footer__wrapper {
+	} */
+	
+	.social {
+		column-gap: 20px;
+	}
+	
+	.social__item {
+		width: 28px;
+	}
 }
