--- a/src/pages/home/style.module.css
+++ b/src/pages/home/style.module.css
@@ -1,10 +1,9 @@
-/* Header */
 .section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 80px 15px;
-	min-height: 639px;
+	padding: 150px 15px;
+	min-height: fit-content;
 	
 	background-color: var(--page-bg);
 	background-image: var(--header-img);
