--- a/src/components/app/styles/main.css
+++ b/src/components/app/styles/main.css
@@ -1,23 +1,23 @@
-@import './reset.css';
+@import url('./reset.css');
 
 @font-face {
-  src: url(../../../fonts/SuisseIntl-Book.woff);
-	font-family: 'Suisse', Arial, Helvetica, sans-serif;
   font-weight: normal;
+	font-family: 'Suisse', "Arial", "Helvetica", sans-serif;
+  src: url("../../../fonts/SuisseIntl-Book.woff");
 }
 
 @font-face {
-  src: url(../../../fonts/SuisseIntl-Bold.woff);
-	font-family: 'Suisse', Arial, Helvetica, sans-serif;
   font-weight: bold;
+	font-family: 'Suisse', "Arial", "Helvetica", sans-serif;
+  src: url("../../../fonts/SuisseIntl-Bold.woff");
 }
 
 :root {
 	/* Colors */
-	--blackpure: #000;
+	--blackpure: #000000;
 	--black: #171718;
 	--black-border: #26292d;
-	--white: #fff;
+	--white: #ffffff;
 	--light-gray: #eae5e5;
 	--purple: #5c62ec;
 	--yellow: #e5c41d;
@@ -28,20 +28,16 @@
 	/* Light mode */
 	--nav-bg: var(--medium-gray);
 	--nav-text: var(--white);
-
 	--header-bg: var(--white);
 	--header-text: var(--black);
 	--header-img: url('./../../../img/header-bg-gg.png');
 	--page-bg: #f7f4e3;
-
 	--text-color: var(--black);
 	--accent: var(--dust-blue);
 	--title-1: var(--black-border);
-
 	--project-card-bg: var(--white);
 	--project-card-text: var(--black);
-	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
-
+	--box-shadow: 0 5px 35px rgb(0 0 0 / 25%);
 	--footer-bg: var(--medium-gray);
 	--footer-text: var(--white);
 
@@ -52,10 +48,8 @@
 	--nav-bg: var(--black);
 	--nav-border: var(--black-border);
 	--nav-text: var(--white);
-
 	--footer-bg: var(--black);
 	--footer-text: var(--white);
-
 	--header-bg: var(--black);
 	--header-text: var(--white);	
 	--header-img: url('./../../../img/header-bg.png');
@@ -64,79 +58,26 @@
 	--title-1: var(--white);
 	--project-card-bg: var(--black);
 	--project-card-text: var(--white);
-	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
-
+	--box-shadow: 0 5px 35px rgb(0 0 0 / 80%);
 	--accent: var(--purple);
 }
 
 
 body {
 	height: 100vh;
-	-webkit-tap-highlight-color: transparent;
+	color: var(--text-color);
+	font-weight: bold;
 	font-family: 'DM Sans', sans-serif;
+	font-family: 'Suisse', "Arial", "Helvetica", sans-serif;
 
 	/* Light mode */
 	background-color: var(--page-bg);
-	color: var(--text-color);
-	font-family: 'Suisse', Arial, Helvetica, sans-serif;
-	font-weight: bold;
+	-webkit-tap-highlight-color: transparent;
 }
-
-
 
 #root {
-	height: 100%;
 	display: flex;
   flex-direction: column;
-	/* gap: 100px; */
+	height: 100%;
 }
 
-/* .App {
-	display: flex;
-	flex-direction: column;
-	} */
-	
-	/* .section {
-		padding: 50px 15px;
-		min-height: 100%;
-	} */
-
-/* .title-1 {
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
-	color: var(--title-1);
-	text-align: center;
-} */
-
-/* .title-2 {
-	margin-bottom: 10px;
-	font-size: 40px;
-	font-weight: 700;
-	line-height: 1.3;
-} */
-
-
-@media (max-width: 620px) {
-
-	/* html,
-	body {
-			min-height: 100vh;
-
-	} */
-
-	/* .section {
-		min-height: 100vh;
-		padding: 40px 0;
-	} */
-
-	/* .title-1 {
-		font-size: 40px;
-	}
-
-	.title-2 {
-		margin-bottom: 10px;
-		font-size: 30px;
-	} */
-	
-}
