--- a/src/components/app/styles/reset.css
+++ b/src/components/app/styles/reset.css
@@ -1,7 +1,8 @@
 /* Reset and base styles  */
+
 * {
-	padding: 0px;
-	margin: 0px;
+	margin: 0;
+	padding: 0;
 	border: none;
 }
 
@@ -13,12 +14,12 @@
 
 :focus,
 :active {
-	/*outline: none;*/
+	/* outline: none; */
 }
 
 a:focus,
 a:active {
-	/* outline: none;*/
+	/* outline: none; */
 }
 
 /* Links */
@@ -26,6 +27,7 @@ a:active {
 a, a:link, a:visited  {
     /* color: inherit; */
     text-decoration: none;
+
     /* display: inline-block; */
 }
 
@@ -41,8 +43,8 @@ aside, nav, footer, header, section, main {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
 	font-weight: inherit;
+    font-size: inherit;
 }
 
 ul, ul li {
@@ -65,9 +67,9 @@ address {
 /* Form */
 
 input, textarea, button, select {
-	font-family: inherit;
-    font-size: inherit;
     color: inherit;
+    font-size: inherit;
+	font-family: inherit;
     background-color: transparent;
 }
 
@@ -77,9 +79,9 @@ input::-ms-clear {
 
 button, input[type="submit"] {
     display: inline-block;
-    box-shadow: none;
-    background-color: transparent;
     background: none;
+    background-color: transparent;
+    box-shadow: none;
     cursor: pointer;
 }
 
