--- a/src/components/btnDarkMode/style.css
+++ b/src/components/btnDarkMode/style.css
@@ -1,36 +1,28 @@
-
-/* Dark mode btn */
+/* stylelint-disable selector-class-pattern */
 
 .dark-mode-btn {
-	order: 9;
-
 	position: relative;
 	display: flex;
+	order: 9;
 	justify-content: space-between;
-
 	width: 51px;
 	height: 26px;
 	padding: 5px;
-
-	border-radius: 50px;
 	background-color: var(--white);
+	border-radius: 50px;
 }
 
 .dark-mode-btn::before {
-	content: '';
-
 	position: absolute;
 	top: 1px;
 	left: 1px;
-
 	display: block;
 	width: 24px;
 	height: 24px;
-
-	border-radius: 50%;
 	background-color: var(--accent);
-
+	border-radius: 50%;
 	transition: left 0.2s ease-in;
+	content: '';
 }
 
 .dark-mode-btn--active::before {
@@ -42,14 +34,3 @@
 	z-index: 9;
 }
 
-/* .darkModeBtnIcon {
-	position: relative;
-	z-index: 9;
-} */
-
-@media (max-width: 620px) {
-	
-	/* .dark-mode-btn {
-		order: 0;
-	} */
-}
