--- a/src/components/btnGoTo/style.module.css
+++ b/src/components/btnGoTo/style.module.css
@@ -1,23 +1,16 @@
-/* Btn outline */
-
 .btn_outline {
 	display: flex;
 	flex-wrap: wrap;
-	column-gap: 10px;
 	align-items: flex-end;
-
-  line-height: 137%;
-
-	max-height: 48px;
 	min-width: 145px;
-
-	padding: 10px 10px;
-
+	max-height: 48px;
+	padding: 10px;
+	color: #000000;
+  line-height: 1.37;
+	column-gap: 10px;
+	background-color: #ffffff;
+	border: 1px solid #000000;
 	border-radius: 5px;
-	border: 1px solid #000;
-	background-color: #fff;
-	color: #000;
-
 	transition: opacity 0.2s ease-in;
 }
 
