--- a/src/components/btnSwitchLanguage/style.css
+++ b/src/components/btnSwitchLanguage/style.css
@@ -1,27 +1,25 @@
+/* stylelint-disable selector-class-pattern */
+
 .en-mode-btn {
-	order: 9;
 	position: relative;
 	display: flex;
+	order: 9;
 	justify-content: space-between;
-	border-radius: 50px;
 	background-color: var(--white);
+	border-radius: 50px;
 }
 
 .en-mode-btn::before {
-	content: '';
-
 	position: absolute;
 	top: 1px;
 	left: 1px;
-
 	display: block;
 	width: 24px;
 	height: 24px;
-
-	border-radius: 50%;
 	background-color: var(--accent);
-
+	border-radius: 50%;
 	transition: left 0.2s ease-in;
+	content: '';
 }
 
 .en-mode-btn--active::before {
