--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -1,19 +1,18 @@
 .footer {
-	margin-top: auto;
-	padding: 30px 0;
-	background-color: var(--footer-bg);
-	color: var(--footer-text);
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	row-gap: 27px;
+	margin-top: auto;
+	padding: 30px 0;
+	color: var(--footer-text);
+	background-color: var(--footer-bg);
 }
 
 .social {
 	display: flex;
-	column-gap: 30px;
 	align-items: center;
+	column-gap: 30px;
 }
 
 .copyright {
@@ -36,11 +35,10 @@
 
 
 
-@media (max-width: 620px) {
-
+@media (width <= 620px) {
 	.footer {
-		padding: 40px 0 30px;
 		row-gap: 20px;
+		padding: 40px 0 30px;
 	}
 	
 	/* .footer__wrapper {
