--- a/src/components/navbar/style.module.css
+++ b/src/components/navbar/style.module.css
@@ -1,16 +1,16 @@
+/* stylelint-disable selector-class-pattern */
+
 .nav {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: flex-end;
 	align-items: center;
-	column-gap: 30px;
-	row-gap: 20px;
-	flex-wrap: wrap;
-
-	padding: 20px 20px;
-	background-color: var(--nav-bg);
-	border-bottom: 1px solid var(--nav-border);
+	gap: 20px 30px;
+	padding: 20px;
 	color: var(--nav-text);
 	letter-spacing: normal;
+	background-color: var(--nav-bg);
+	border-bottom: 1px solid var(--nav-border);
 }
 
 .logo {
@@ -29,16 +29,15 @@
 .nav_list {
 	display: flex;
 	flex-wrap: wrap;
-	row-gap: 10px;
 	align-items: center;
-	column-gap: 40px;
+	gap: 10px 40px;
 	font-size: 16px;
 }
 
 .nav_list__link {
 	color: var(--nav-text);
-	font-family: 'Suisse', Arial, Helvetica, sans-serif;
 	font-weight: bold;
+	font-family: 'Suisse', "Arial", "Helvetica", sans-serif;
 }
 
 .nav_list__link:hover {
@@ -51,19 +50,17 @@
 }
 
 .nav_list__link__active::before {
-	content: '';
-
 	position: absolute;
-	left: 0;
 	top: 100%;
-
+	left: 0;
 	display: block;
-	height: 2px;
 	width: 100%;
+	height: 2px;
 	background-color: var(--accent);
+	content: '';
 }
 
-@media (max-width: 577px) {
+@media (width <= 577px) {
 	.nav_wrapper {
 		flex-direction:column-reverse;
 		align-items: flex-end;
@@ -73,6 +70,7 @@
 	.nav_list {
 		flex-direction: column;
 		align-items: flex-end;
+		font-size: 20px;	
 	}
 
 	.logo {
@@ -80,13 +78,14 @@
 	}
 }
 
-@media (max-width: 620px) {
+@media (width <= 620px) {
 	.nav {
 		justify-content: space-between;
 	}
+	
 }
 
-@media (max-width: 320px) {
+@media (width <= 320px) {
 	.nav {
 		display: block;
 	}	
