--- a/src/components/not-fount-404/style.module.css
+++ b/src/components/not-fount-404/style.module.css
@@ -1,13 +1,13 @@
 .section {
-	padding: 50px 15px;
 	min-height: 400px;
+	padding: 50px 15px;
 }
 
 .page_not_found {
-  padding: 10% 10%;
   align-self: center;
-  font-size: 48px;
+  padding: 10%;
+  color: var(--accent);
   font-weight: bold;
-  color: var(--accent);  
+  font-size: 48px;  
 }
 
