--- a/src/pages/contacts/style.module.css
+++ b/src/pages/contacts/style.module.css
@@ -1,33 +1,33 @@
-.section {
-	padding: 50px 15px;
-	min-height: fit-content;
-	/* height: fit-content; */
+/* stylelint-disable selector-class-pattern */
 
+.section {
+	min-height: fit-content;
+	padding: 50px 15px;
 }
 
 .title_1 {
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
 	color: var(--title-1);
+	font-weight: 700;
+	font-size: 60px;
+	line-height: 1.3;
 	text-align: center;
 }
 
 .title_2 {
 	margin-bottom: 10px;
-	font-size: 40px;
 	font-weight: 700;
+	font-size: 40px;
 	line-height: 1.3;
 }
 
 .content_list {
-	margin: 0 auto;
-	padding-top: 20px;
-	max-width: 570px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	row-gap: 40px;
+	max-width: 570px;
+	margin: 0 auto;
+	padding-top: 20px;
 	text-align: center;
 }
 
@@ -40,8 +40,7 @@
 	line-height: 1.5;
 }
 
-@media (max-width: 620px) {
-
+@media (width <= 620px) {
 	.title_1 {
 		font-size: 40px;
 	}
