--- a/src/pages/my-projects/style.module.css
+++ b/src/pages/my-projects/style.module.css
@@ -1,30 +1,27 @@
 .section {
-	padding: 50px 15px;
 	min-height: 300px;
-
 	min-height: fit-content;
+	padding: 50px 15px;
 
 }
 
 .title_1 {
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
 	color: var(--title-1);
+	font-weight: 700;
+	font-size: 60px;
+	line-height: 1.3;
 	text-align: center;
 }
 
 .projects {
-	padding: 34px 0 0;
-	display: flex;	
+	display: flex;
+	flex-wrap: wrap;	
 	justify-content: center;
-	flex-wrap: wrap;
-	column-gap: 30px;
-	row-gap: 30px;
+	gap: 30px;
+	padding: 34px 0 0;
 }
 
-@media (max-width: 620px) {
-
+@media (width <= 620px) {
 	.title_1 {
 		font-size: 40px;
 	}
