--- a/src/pages/project/style.module.css
+++ b/src/pages/project/style.module.css
@@ -1,22 +1,21 @@
-.section {
-	padding: 50px 15px;
-	min-height: fit-content;
+/* stylelint-disable selector-class-pattern */
 
+.section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 	align-self: center;
+	max-width: 865px;
+	min-height: fit-content;
 	margin: 0 auto;
-
-	max-width: 865px;	
+	padding: 50px 15px;	
 }
 
 .title_1 {
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
 	color: var(--title-1);
+	font-weight: 700;
+	font-size: 60px;
+	line-height: 1.3;
 	text-align: center;
 }
 
@@ -24,29 +23,29 @@
 	max-width: 100%;
 	margin-top: 40px;
 	margin-bottom: 40px;
-	box-shadow: var(--box-shadow);
 	border-radius: 10px;
+	box-shadow: var(--box-shadow);
 }
 
 .project_details__desc {
-	margin-bottom: 30px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	margin-bottom: 30px;
 }
 
 .project_details__skills {
+	align-self: center;
 	font-weight: bold;
 	font-size: 32px;
 	line-height: 1.3;
-	align-self: center;
 }
 
 .project_details__text {
-	font-weight: normal;
 	display: block;
-	text-align: start;
+	font-weight: normal;
 	font-size: 24px;
+	text-align: start;
 }
 
 .project_details__buttons {
@@ -54,9 +53,10 @@
 	gap: 10px
 }
 
-@media (max-width: 620px) {
+@media (width <= 620px) {
   .project_details__desc {
-		margin-bottom: 20px;
+		gap: 26px;
+		padding: 9px 16px 20px;
 		font-size: 22px;
 	}
 
